--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,121 @@
 .App {
   text-align: center;
+  display: flex;
+  position: absolute;
+  top: 0;bottom: 0;right: 0;left: 0;
+  background-color: #282c34;
+  color: white;
+}
+
+.sidemenu {
+  width: 240px;
+  padding: 10px;
+  border: 1px solid white;
+}
+
+.side-menu-button {
+  padding: 12px;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: left;
+  transition: ease 0.25s all;
+
+}
+
+.side-menu-button:hover {
+  background-color: rgba(255,255,255,0.1);
+}
+
+.side-menu-button span {
+  padding-left: 6px;
+  padding-right: 12px;
+}
+
+.title {
+  margin-top: 20vh;
+  padding: 24px;
+  font-size: 2.25em;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  gap: .5em;
+}
+
+.chatbox {
+  flex: 1;
+  border: 1px solid white;
+  background-color: #343541;
+  position: relative;
+}
+
+.chat-log {
+  text-align: left;
+}
+
+.chat-message-container.gpt {
+  background-color: #444654
+}
+
+.chat-message {
+  display: flex;
+  max-width: 640px;
+  padding: 12px 12px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.avatar {
+  background: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+
+}
+
+.avatar.gpt {
+  background: #0da37f;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+
+}
+
+.message {
+  text-align: left;
+  padding-left: 40px;
+  padding-right: 40px;
+
+}
+
+.chat-input-container {
+  padding: 24px;
+  position: absolute;
+  bottom: 48px;
+  left:0;
+  right:0;
+}
+
+.chat-input-textarea {
+  background-color: #40414f;
+  color: white;
+  font-size: 1.25em;
+  width: 100%;
+  border-radius:5px;
+  border: none;
+  outline: none;
+  box-shadow: 0 8px 4px 0 rbga(0, 0, 0, 0.5);
+}
+
+.footer {
+  padding: 12px;
+  color: hsla(0, 0%, 100%, .5);
+  margin-bottom: 12px;
+  position: absolute;
+  bottom:0;
+  left:0;
+  right:0;
 }
 
 .App-logo {
